--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
               </div>
               <div class="col-md-6 offset-md-6">
                 <div class="content-data" style="font-size: 10px; text-align:right;">
-                  <%= c.client_ip %> <%= c.created_at.strftime("%H:%M %d/%m") %>
+                  <%= c.client_ip %> <%= c.created_at.in_time_zone('America/Santiago').strftime("%H:%M %d/%m") %>
                 </div>
               </div>
             </div>
